namespace java org.wso2.carbon.agent.commons.thrift.exception

exception ThriftTypeDefinitionException {
    1: required string message
}

exception ThriftDifferentTypeDefinitionAlreadyDefinedException {
    1: required string message
}

exception ThriftMalformedTypeDefinitionException {
    1: required string message
}

exception ThriftUndefinedEventTypeException {
    1: required string message
}
exception ThriftSessionExpiredException {
    1: required string message
}
